# happy_chart_rs

./: .gitignore  Cargo.toml  README.MD  bacon.toml  build.rs
.github/workflows/: rust.yml
assets/: program_icon_gimp.xcf
benches/: stat_benches.rs
src/: auto_update_status.rs  color_setting.rs  common.rs  daystat.rs  happy_chart_state.rs  improved_daystat.rs  last_session.rs  lib.rs  main.rs  mood_tag.rs  program_options.rs  state_stats.rs
src/common/: backup.rs  color.rs  encryption.rs  export.rs  math.rs  mood_tag.rs  save.rs  update.rs
src/day_stats/: daystat.rs  improved_daystat.rs  mod.rs
src/options/: color_setting.rs  mod.rs  program_options.rs
src/state/: activities.rs  error_states.rs  happy_chart_egui_impl.rs  happy_chart_state.rs  mod.rs  prompt_states.rs  state_stats.rs  tutorial_state.rs
src/ui/: about_screen.rs  activity_screen.rs  central_screen.rs  encryption.rs  error_screen.rs  feedback_screen.rs  help_screen.rs  mod.rs  mood_selector_menu.rs  note_edit_screen.rs  options_menu.rs  statistics_screen.rs  tutorial_screen.rs  user_prompt_screens.rs
src/user_feedback/: mod.rs
