[package]
name = "happy_chart_rs"
version = "1.13.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A subjective day quality charting program"
keywords = ["happy","charting","mental-health","binary", "journal"]
readme = "README.MD"
repository = "https://github.com/CoryRobertson/happy_chart_rs"
homepage = "https://github.com/CoryRobertson/happy_chart_rs"
categories = ["visualization","value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
eframe = { version = "0.24.1", features = ["serde"]}
egui = { version = "0.24.1", features = ["serde"]}
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8.4", features = ["serde"] }
serde_json = "1.0.108"
rfd = "0.12.1"
image = "0.24.7"
# deflate should be used for release packages
# example file name:
# happy_chart_rs-v1.10.2-x86_64-pc-windows-msvc.zip
self_update = { version = "0.39.0", features = ["archive-zip","compression-flate2","compression-zip-bzip2","compression-zip-deflate"]}
zip = "^0.6.6"

[build-dependencies]
vergen = { version = "8.2.6", features = ["build","git","gitcl"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dev-dependencies]
divan = "0.1.7"
rand = "0.8.5"

[[bench]]
name = "stat_benches"
harness = false

# TODO: use https://crates.io/crates/tray-item to allow happy chart to run minimized ? unsure if I want this yet as its a little much just for a daily journaling tool
