[package]
name = "happy_chart_rs"
version = "1.15.2"
edition = "2021"
license = "GPL-3.0-only"
description = "A subjective day quality charting program"
keywords = ["happy","charting","mental-health","binary", "journal"]
readme = "README.MD"
repository = "https://github.com/CoryRobertson/happy_chart_rs"
homepage = "https://github.com/CoryRobertson/happy_chart_rs"
categories = ["visualization","value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
eframe = { version = "0.26.2", features = ["serde"]}
egui = { version = "0.26.2", features = ["serde"]}
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
chrono-tz = { version = "0.8.6", features = ["serde"] }
serde_json = "1.0.114"
rfd = "0.14.0"
image = "0.24.9"
# deflate should be used for release packages
# example file name:
# happy_chart_rs-v1.10.2-x86_64-pc-windows-msvc.zip
self_update = { version = "0.39.0", features = ["archive-zip","compression-flate2","compression-zip-bzip2","compression-zip-deflate"]}
zip = "^0.6.6"
tracing = { version = "0.1.40" }
tracing-tracy = { version = "0.11.0", optional = true, features = ["default","flush-on-exit"]}
tracing-subscriber = "0.3.18"

[features]
tracing = ["dep:tracing-tracy"]

[build-dependencies]
vergen = { version = "8.2.6", features = ["build","git","gitcl"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dev-dependencies]
divan = "0.1.14"
rand = "0.8.5"

[[bench]]
name = "stat_benches"
harness = false
